// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Title Component should match snapshot when text does not include free label 1`] = `
<div
  aria-level="4"
  className="event__title"
  role="heading"
>
  testText
  <span
    className="event__title--free"
  />
</div>
`;

exports[`Title Component should match snapshot when text includes free label 1`] = `
<div
  aria-level="4"
  className="event__title"
  role="heading"
>
  testText
  <span
    className="event__title--free"
  >
     FREE!!!
  </span>
</div>
`;
